[package]
name = "nf"
version = "1.0.0"
edition = "2021"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
description = "A CLI tool written in Rust which creates a single empty file"
readme = "README.md"
repository = "https://github.com/sentinel1909/nf"
license = "MIT"
keywords = ["file, utility"]
categories = ["CLI"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = [ "derive" ] }
